--- a/Voxels Engine/Voxels Engine.csproj
+++ b/Voxels Engine/Voxels Engine.csproj
@@ -9,8 +9,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="OpenTK" Version="5.0.0-pre.13" />
-      <PackageReference Include="OpenTK.Graphics" Version="5.0.0-pre.13" />
+      <PackageReference Include="OpenTK" Version="4.9.4" />
+      <PackageReference Include="OpenTK.Graphics" Version="4.9.4" />
       <PackageReference Include="System.Drawing.Common" Version="9.0.1" />
     </ItemGroup>
 
